--- a/test/expected/test.html
+++ b/test/expected/test.html
@@ -11,8 +11,8 @@
 		mocha.ui('bdd');
 		mocha.reporter('html');
 	</script>
-	<script src="js/1.js"></script>
-	<script src="static_test.js"></script>
+	<script src="js/tpl.js"></script>
+	<script src="test.js"></script>
 	<script>
 	if (window.mochaPhantomJS) { mochaPhantomJS.run(); }
 	else { mocha.run(); }
